# Huginn

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  mainwindowmodel.cpp  mainwindowmodel.h
tools/: Cmake-Windows.ps1.example  Copy-Libs.ps1.example
